than Windows XP.
[] Filters containing tests on the entry type now exported to XML
correctly.
[] Validate of Password History (-v command line flag) now correctly
removes history fields with invalid dates or empty old password fields.
[] Fix match test 'does not begin with' - used in filters and restricting
entries exported to Text or XML.

New Features for 3.19.1
=======================
[2881604] Allow edit of base entry of a shortcut via the Edit menu and/or
by right-clicking on a shortcut entry.
[2872273] Improve Import Text 'Line skipped' message.
[2826509] Can now update passwords of existing entries via Import Text or XML.
For Text import, the 'Group/Title', 'Username' and 'Password' fields are required.
Fox XML import, the Title and Password elements are required. If the Group and
Username elements are missing, they are assumed to be empty.  All other fields or 
elements can be present but will be ignored.
[] Add highlighting of added/changed and deleted records.  The latter can
only be viewed via a filter or the supplied menu item (under View menu).

Changes to Existing Features in 3.19.1
======================================
[2880663] 'Browse to' special fields (currently: [alt], {alt}, [ssh], [autotype]
and [xa]) are removed from the URL field when copied to the clipboard or when
used in the RunCommand (via $url).  If the '[alt]' or {alt} were present, then
the RunCommand will execute this program.
[2868278] The SystemTray Unlock menu item now, if the correct passphrase is
given, only unlocks the databse. To show the application, use the Restore
menu item.
[2874520] To prevent junk showing in the Notes field in List View due to end
of line characters, now only show the first line but indicate more are there using
[>>>] at end of line. Setting preference "Show Notes as Tooltips in Tree & List
View" will show these (up to 250 characters).

Bugs fixed in 3.19
==================
[2865116] Status-Bar message now correctly states "Password Copied"