@@ -728,7 +728,7 @@ BEGIN
   IDS_TREEFONT             "Set Tree/List display font"
   IDS_PSWDFONT             "Set Password display font"
   IDS_VKBDFONT             "Set Virtual Keyboard font"
-  IDS_DRAGTOCOPY           "Dragbar: Hold left mouse button down on selected picture and drag to, say, a field on a web page. On releasing the mouse button, the particular contents (Group, Title, Username, Password, Notes or URL) will be pasted into that field."
+  IDS_DRAGTOCOPY           "Drag this image onto a another window to paste the '%s' field."
   IDS_ADDENTRY             "Add Entry"
   IDS_EDITENTRY            "Edit Entry:   \xab%s\xbb \xab%s\xbb \xab%s\xbb"
   IDS_VIEWENTRY            "View Entry:   \xab%s\xbb \xab%s\xbb \xab%s\xbb"
